# persistent-storage-manager

./: .gitmodules  CHANGELOG.md  CONTRIBUTING.md  ChangeLog  Makefile.am  NOTICE  README  README.md  configure.ac  test.txt
.github/: CODEOWNERS
.github/workflows/: native-build.yml
config/: bbhm_def_cfg_qemu.xml
cov_docker_script/: component_config.json  configure_options.conf
cov_docker_script/stubs/: factory_info_api.h
scripts/: bbhm_patch.sh
source/: Makefile.am
source/PsmFileLoader/: psm_flo_base.c  psm_flo_control.c  psm_flo_global.h  psm_flo_interface.c  psm_flo_internal_api.h  psm_flo_operation.c  psm_flo_parse.c  psm_flo_states.c
source/PsmSysRegistry/: psm_sysro_base.c  psm_sysro_cfmif.c  psm_sysro_control.c  psm_sysro_global.h  psm_sysro_interface.c  psm_sysro_internal_api.h  psm_sysro_operation.c  psm_sysro_states.c  psm_sysro_storage.c  psm_sysro_sysramif.c
source/Ssp/: psm_api_perf_test.c  psm_db_init.c  psm_hal_apis.c  psmcli.c  ssp_cfmif.c  ssp_dbus.c  ssp_global.h  ssp_main.c  ssp_rbus.c
source/include/: psm_co_name.h  psm_co_oid.h  psm_co_type.h  psm_db_init.h  psm_flo_exported_api.h  psm_flo_interface.h  psm_hal_apis.h  psm_ifo_cfm.h  psm_properties.h  psm_sysro_exported_api.h  psm_sysro_interface.h
source/test/: CcspPsmTest.cpp  Makefile.am  gtest_main.cpp  psm_db_test.cpp  psm_flo_base_test.cpp  psm_flo_control_test.cpp  psm_flo_interface_test.cpp  psm_flo_operation_test.cpp  psm_flo_parse_test.cpp  psm_flo_states_test.cpp  psm_mock.cpp  psm_mock.h  psm_sysro_base_test.cpp  psm_sysro_cfmif_test.cpp  psm_sysro_control_test.cpp  psm_sysro_interface_test.cpp  psm_sysro_operation_test.cpp  psm_sysro_states_test.cpp  psm_sysro_storage_test.cpp  psm_sysro_sysramif_test.cpp  run_ut.sh  testing_purpose.c
